# jsonpp

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
parseables/: def.json++  exotic_numbers.json  import.json++  import_resolved.json  keys_vals.json++  numbers.json  ref_dynamic.json++  ref_dynamic_resolved.json  strings.json  undefined.json++  undefined_resolved.json  wikipedia.json
parseables/evaluation_inputs/: def.jsonpp  def_dyn_def.jsonpp  div.jsonpp  eq.jsonpp  float.jsonpp  gt.jsonpp  gte.jsonpp  import.jsonpp  int.jsonpp  len.jsonpp  log.jsonpp  lt.jsonpp  lte.jsonpp  max.jsonpp  merge.jsonpp  min.jsonpp  mod.jsonpp  mul.jsonpp  not.jsonpp  pow.jsonpp  range.jsonpp  ref_dynamic.jsonpp  ref_into_import.jsonpp  self_ref.jsonpp  simple_dynamic.jsonpp  str.jsonpp  sub.jsonpp  sum.jsonpp  undefined.jsonpp  wikipedia.jsonpp
parseables/evaluation_outputs/: def.json  def_dyn_def.json  div.json  eq.json  float.json  gt.json  gte.json  import.json  int.json  log.json  lt.json  lte.json  max.json  merge.json  min.json  mod.json  mul.json  not.json  pow.json  range.json  ref_into_import.json  self_ref.json  simple_dynamic.json  str.json  sub.json  sum.json
parseables/lib/: ref_dynamic.jsonpp
src/: ast_builder.rs  builtins.rs  evaluation.rs  jsonpp.rs  lib.rs  main.rs  parsing.rs  paths.rs  tokenizing.rs
